# samplecjni

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sample/samplecjni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sample/samplecjni/: MainActivity.kt
app/src/main/jni/: Android.mk
app/src/main/jni/src/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sample/samplecjni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
